tests/errors/comb-port-in-condition.expect
---CODE---
1
---STDERR---
[WARN  calyx_opt::passes::well_formed] tests/errors/comb-port-in-condition.futil
    9 |    if le.out { seq {} }
      |    ^^^^^^^^^^^^^^^^^^^^ If statement has no comb group and its condition port le.out is unstable
Error: tests/errors/comb-port-in-condition.futil
9 |    if le.out { seq {} }
  |    ^^^^^^^^^^^^^^^^^^^^ [Papercut] Port `le.out` is an output port on combinational primitive `std_le` and will always output 0. Add a `with` statement to the `if` statement to ensure it has a valid value during execution.
